feat(调试): 增强玩家加入时的调试信息输出
为调试模式添加更详细的格言生成信息，包括格言内容、长度、列表大小和时间戳。同时改进URL处理，增加URI语法检查以防止无效API URL格式。