@@ -27,26 +27,45 @@ public class PlayerJoinListener implements Listener {
                 player.sendMessage(colorize(prefix + motto));
                 LiteMotto.getRecentMottoManager().addMotto(motto); // 保存格言
                 
-                // 如果玩家处于调试模式，发送调试信息
+                // 如果玩家处于调试模式，发送详细调试信息
                 if (DebugManager.isInDebugMode(player)) {
-                    player.sendMessage(colorize("&7[Debug] 格言已生成并保存"));
+                    player.sendMessage(colorize("&7[Debug] &a格言生成成功"));
+                    player.sendMessage(colorize("&7[Debug] &f内容: &e" + motto));
+                    player.sendMessage(colorize("&7[Debug] &f长度: &e" + motto.length() + " &f字符"));
+                    player.sendMessage(colorize("&7[Debug] &f已添加到最近格言列表，当前列表大小: &e" + 
+                        LiteMotto.getRecentMottoManager().getRecentMottos().size()));
                 }
                 
-                // 如果有调试模式玩家，输出调试信息到控制台
+                // 如果有调试模式玩家，输出详细调试信息到控制台
                 if (DebugManager.hasDebugPlayers()) {
-                    Bukkit.getLogger().info("[Debug] 玩家 " + player.getName() + " 加入服务器，生成格言: " + motto);
+                    Bukkit.getLogger().info("========== LiteMotto 调试信息 ==========");
+                    Bukkit.getLogger().info("[Debug] 玩家 " + player.getName() + " 加入服务器");
+                    Bukkit.getLogger().info("[Debug] UUID: " + player.getUniqueId());
+                    Bukkit.getLogger().info("[Debug] 格言生成成功: " + motto);
+                    Bukkit.getLogger().info("[Debug] 格言长度: " + motto.length() + " 字符");
+                    Bukkit.getLogger().info("[Debug] 最近格言列表大小: " + LiteMotto.getRecentMottoManager().getRecentMottos().size());
+                    Bukkit.getLogger().info("[Debug] 格言生成时间: " + new java.util.Date());
+                    Bukkit.getLogger().info("======================================");
                 }
             } else {
                 player.sendMessage(colorize("&c获取格言失败，请稍后再试。"));
                 
-                // 如果玩家处于调试模式，发送调试信息
+                // 如果玩家处于调试模式，发送详细调试信息
                 if (DebugManager.isInDebugMode(player)) {
-                    player.sendMessage(colorize("&7[Debug] 格言生成失败"));
+                    player.sendMessage(colorize("&7[Debug] &c格言生成失败"));
+                    player.sendMessage(colorize("&7[Debug] &f可能原因: &e网络问题或API响应错误"));
+                    player.sendMessage(colorize("&7[Debug] &f请检查控制台获取更多错误信息"));
                 }
                 
-                // 如果有调试模式玩家，输出调试信息到控制台
+                // 如果有调试模式玩家，输出详细调试信息到控制台
                 if (DebugManager.hasDebugPlayers()) {
-                    Bukkit.getLogger().info("[Debug] 玩家 " + player.getName() + " 加入服务器，格言生成失败");
+                    Bukkit.getLogger().info("=========== LiteMotto Debug ===========");
+                    Bukkit.getLogger().info("[Debug] 玩家 " + player.getName() + " 加入服务器");
+                    Bukkit.getLogger().info("[Debug] UUID: " + player.getUniqueId());
+                    Bukkit.getLogger().info("[Debug] 格言生成状态: 失败");
+                    Bukkit.getLogger().info("[Debug] 可能原因: 网络问题或API响应错误");
+                    Bukkit.getLogger().info("[Debug] 尝试时间: " + new java.util.Date());
+                    Bukkit.getLogger().info("======================================");
                 }
             }
         });
@@ -87,7 +106,13 @@ public class PlayerJoinListener implements Listener {
                 ));
             }
 
-            URL url = new URL(apiUrl);
+            URL url;
+            try {
+                url = new java.net.URI(apiUrl).toURL();
+            } catch (java.net.URISyntaxException e) {
+                Bukkit.getLogger().severe("LiteMotto: 无效的API URL格式: " + apiUrl + ", 错误: " + e.getMessage());
+                return null;
+            }
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("POST");
             connection.setRequestProperty("Content-Type", "application/json");
